--- a/api/DriveVidStore-Api.csproj
+++ b/api/DriveVidStore-Api.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
+    <PackageReference Include="Google.Cloud.Firestore.V1" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.21" />
   </ItemGroup>
 
