--- a/worker/DriveVidStore-Worker.csproj
+++ b/worker/DriveVidStore-Worker.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Azure.Core" Version="1.21.0" />
     <PackageReference Include="Azure.Storage.Common" Version="12.9.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.8.0" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="3.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
