--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -16,5 +16,6 @@ RUN dotnet publish "DriveVidStore-Worker.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
+COPY 3rd-party /3rd-party
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "DriveVidStore-Worker.dll"]
