--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   api:
-    image: drivevidstoreapi:dev2
+    image: drivevidstoreapi:localdev
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/firebase-secrets/drivevidstore-firebase-adminsdk-fxpsy-2ed43d6e16.json
       - ASPNETCORE_ENVIRONMENT=Development
@@ -18,7 +18,7 @@ services:
       - C:\Users\colte\.nuget\packages\:/root/.nuget/fallbackpackages
 
   worker:
-    image: drivevidstoreworker:dev2
+    image: drivevidstoreworker:localdev
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/firebase-secrets/drivevidstore-firebase-adminsdk-fxpsy-2ed43d6e16.json
       - StorageAccountConnectionString=${StorageAccountConnectionString}
