--- a/api/DriveVidStore-Api.csproj
+++ b/api/DriveVidStore-Api.csproj
@@ -21,5 +21,9 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\common\DrivVidStore-Common.csproj" />
+  </ItemGroup>
+
 
 </Project>
